add_subdirectory(common)
add_subdirectory(createBIM)
add_subdirectory(createEDP)
add_subdirectory(createEVENT)
add_subdirectory(createSAM)
add_subdirectory(performDL)
add_subdirectory(performFEM)
add_subdirectory(performRegionalMapping)
add_subdirectory(performRegionalEventSimulation)
add_subdirectory(performSIMULATION)
add_subdirectory(performUQ)
add_subdirectory(performFEM)
add_subdirectory(Workflow)
