add_subdirectory(common)
add_subdirectory(createAIM)
add_subdirectory(createEDP)
add_subdirectory(createEVENT)
add_subdirectory(createSAM)
add_subdirectory(performDL)
add_subdirectory(performFEM)
add_subdirectory(performRegionalMapping)
add_subdirectory(performRegionalEventSimulation)
add_subdirectory(performSIMULATION)
add_subdirectory(performUQ)
add_subdirectory(performHUA)
add_subdirectory(Workflow)
add_subdirectory(tools)
add_subdirectory(performanceAssessment)
add_subdirectory(systemPerformance)
