add_subdirectory(whale)
simcenter_add_python_script(SCRIPT femUQ.py)
simcenter_add_python_script(SCRIPT changeJSON.py)
simcenter_add_python_script(SCRIPT "sWHALE.py")
simcenter_add_python_script(SCRIPT "rWHALE.py")
simcenter_add_python_script(SCRIPT RegionalEarthquakeSimulation.py)
simcenter_add_python_script(SCRIPT WorkflowUtils.py)
simcenter_add_file(NAME WorkflowApplications.json)
simcenter_add_python_script(SCRIPT SiteResponse_workflow.py)
simcenter_add_python_script(SCRIPT R2DTool_workflow.py)
simcenter_add_python_script(SCRIPT CreateWorkflowJobs.py)
