add_subdirectory(gmtEDP)
add_subdirectory(standardEarthquakeEDP)
add_subdirectory(standardEarthquakeEDP_R)
add_subdirectory(standardWindEDP)
add_subdirectory(standardEDP)
add_subdirectory(userEDP)
add_subdirectory(userEDP_R)
add_subdirectory(simpleEDP)
add_subdirectory(dummyEDP)
add_subdirectory(surrogateEDP)
add_subdirectory(standardHydroEDP)
add_subdirectory(standardTsunamiEDP)
add_subdirectory(standardStormSurgeEDP)
