add_subdirectory(common)
add_subdirectory(CFDEvent)
add_subdirectory(GeoClawOpenFOAM)
add_subdirectory(DEDM_HRP)
add_subdirectory(hazardBasedEvent)
add_subdirectory(multiplePEER)
add_subdirectory(multipleSimCenter)
add_subdirectory(siteResponse)
add_subdirectory(windTunnelExperiment)
add_subdirectory(LowRiseTPU)
add_subdirectory(HighRiseTPU)
add_subdirectory(pointWindSpeed)
add_subdirectory(LLNL_SW4)
add_subdirectory(SimCenterEvent)
add_subdirectory(ASCE7_WindSpeed)
add_subdirectory(stochasticGroundMotion)
add_subdirectory(stochasticWind)
add_subdirectory(groundMotionIM)
add_subdirectory(uniformPEER)
add_subdirectory(experimentalWindForces)
add_subdirectory(experimentalWindPressures)
add_subdirectory(EmptyDomainCFD)
add_subdirectory(IsolatedBuildingCFD)
add_subdirectory(SurroundedBuildingCFD)
add_subdirectory(coupledDigitalTwin)
add_subdirectory(physicsBasedMotion)
add_subdirectory(M9)
add_subdirectory(Istanbul)
add_subdirectory(MPM)
add_subdirectory(stochasticWave)



