add_executable(StandardEDP StandardEDP.cpp)
target_include_directories(StandardEDP PRIVATE ${CMAKE_SOURCE_DIR}/modules)
target_link_libraries(StandardEDP PRIVATE jansson::jansson)
file(RELATIVE_PATH _rel ${CMAKE_SOURCE_DIR}/modules ${CMAKE_CURRENT_SOURCE_DIR})
install(TARGETS StandardEDP DESTINATION ${_rel})
