simcenter_add_python_script(SCRIPT Celeris.py)
simcenter_add_python_script(SCRIPT setrun.py)
simcenter_add_python_script(SCRIPT setrun_old.py)
simcenter_add_python_script(SCRIPT irrWaves.txt)
simcenter_add_python_script(SCRIPT test_curve.xyz)
simcenter_add_python_script(SCRIPT config.json)

add_subdirectory(celeris)
