simcenter_add_python_script(SCRIPT IstanbulStations.py)
simcenter_add_python_script(SCRIPT IstanbulRun.py)
simcenter_add_python_script(SCRIPT IstanbulApp.py)
simcenter_add_python_script(SCRIPT IstanbulApp2.py)
simcenter_add_python_script(SCRIPT Istanbul_AllSites_grid.html)
simcenter_add_python_script(SCRIPT All_Stations_Lat_Lon_Vs30_BedrockDepth.csv)
add_subdirectory(TapisFiles)