simcenter_add_python_script(SCRIPT M9Run.py)
simcenter_add_python_script(SCRIPT M9_sites.csv)
simcenter_add_python_script(SCRIPT M9Stations.py)
simcenter_add_python_script(SCRIPT M9API.py)
simcenter_add_python_script(SCRIPT M9App.py)
simcenter_add_python_script(SCRIPT M9App2.py)
simcenter_add_python_script(SCRIPT A_grid.html)
simcenter_add_python_script(SCRIPT B_grid.html)
simcenter_add_python_script(SCRIPT C_grid.html)
simcenter_add_python_script(SCRIPT D_grid.html)
simcenter_add_python_script(SCRIPT E_grid.html)
simcenter_add_python_script(SCRIPT All_grid.html)
add_subdirectory(TapisFiles)